objects/BenefitDisbursement.object
<CustomObject>
    <fields>
        <fullName>BD_18_Digit_ID__c</fullName>
        <description>WHAT: 18 Digit ID for Benefit Disbursement Records
WHO: Brian Ricter | Q Branch
WHEN: 242.1</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD - 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Name__c</fullName>
        <formula>BenefitAssignment.Benefit.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Programs_Base_Benefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the benefit</description>
        <label>Benefit</label>
        <referenceTo>Benefit</referenceTo>
        <relationshipLabel>Benefit Disbursements</relationshipLabel>
        <relationshipName>Benefit_Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>